--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     background-color: black;
     height: 100%;
     background-attachment: fixed;
-    background-position: center center;
+    background-position: right center;
     background-repeat: no-repeat;
     background-image: url("../img/landing1920.jpg");
     background-size: cover;
@@ -48,7 +48,7 @@ body {
 
 header {
     width: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
     text-align: center;
     border-radius: 8px;
 }
@@ -138,7 +138,7 @@ h1 {
 .landing-page, .find-book-page, .find-coffee-shop-page, .final-page {
     /*margin-left: auto;
     margin-right: auto;*/
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
     color: #4195b7;
     border-radius: 8px;
 }
