--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,7 @@ body {
 }
 
 .books-bg {
-    /*background: url("../img/books3x1920.jpg") no-repeat center center fixed;*/
-    background: url("../img/books5x1920.jpg") no-repeat center center fixed;
+    background: url("../img/books1920.jpg") no-repeat right center fixed;
     background-size: cover;
     /*z-index: 1;*/
     -webkit-transition: all 0.9s ease-in 0.15s;
@@ -29,7 +28,7 @@ body {
 }
 
 .coffee-bg {
-    background: url("../img/coffee1920.jpg") no-repeat center center fixed;
+    background: url("../img/coffee1920.jpg") no-repeat right center fixed;
     background-size: cover;
     /*z-index: 2;*/
     -webkit-transition: all 0.9s ease-in 0.2s;
@@ -38,7 +37,7 @@ body {
 }
 
 .final-bg {
-    background: url("../img/final1920.jpg") no-repeat center center fixed;
+    background: url("../img/final1920.jpg") no-repeat right center fixed;
     background-size: cover;
     /*z-index: 3;*/
     -webkit-transition: all 0.9s ease-in 0.2s;
@@ -54,7 +53,7 @@ header {
 }
 
 a:link, a:active, a:visited {
-    color: maroon;
+    color: #337ab7;
 }
 
 #external-link-img {
@@ -71,8 +70,9 @@ a:hover {
     padding-top: 20px;
     /*border: 1px solid white;*/
     font-family: 'Dancing Script', cursive;
-    font-size: 110px;
-    color: #4195b7;
+    font-size: 115px;
+    /*color: #4195b7;*/
+    color: #337ab7;
     font-weight: bold;
     letter-spacing: 7px;
 }
@@ -80,9 +80,9 @@ a:hover {
 .subtitle {
     /*padding-top: 5px;*/
     padding-bottom: 10px;
-    color: maroon;
+    color: #C7A572;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 22px;
     font-family: 'Oswald', sans-serif;
     /*border: 1px solid white;*/
     letter-spacing: 2px;
@@ -94,8 +94,8 @@ h1 {
 
 .instructions {
     padding-top: 30px;
-    color: #4195b7;
-    width: 80%;
+    color: #C7A572;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -176,28 +176,34 @@ h1 {
     margin-bottom: 20px;
     font-family: 'Merienda One', cursive;
     font-size: 27px;
+    color: #C7A572;
 }
 
 #book-select-tagline {
     /*display: none;*/
     font-family: Helvetica;
     font-size: 20px;
+    color: #C7A572;
+    margin-top: 10px;
 }
 
-.coffee-shop-results, .final-page-results {
+#book-search-form {
+    margin-bottom: 20px;
+}
+
+.book-results, .coffee-shop-results, .final-page-results {
     width: 100%;
     height: 545px;
     overflow: auto;
     /*border: 1px solid black;*/
     border-radius: 8px;
     margin-bottom: 2%;
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .book-results {
-    width: 100%;
-    height: 545px;
-    overflow: auto;
-    margin-bottom: 2%;
+    padding: 10px;
+    /*width: 50%;*/
 }
 
 .book-info {
@@ -212,21 +218,23 @@ h1 {
     display: none;
     width: 45%;
     font-size: 18px;
-    margin-top: 75px;
+    margin-top: 10px;
 }
 
 .coffee-shop-search-tagline-1 {
     display: inline-block;
     margin-top: 20px;
-    /*margin-bottom: 20px;*/
+    margin-bottom: 20px;
     font-family: 'Merienda One', cursive;
     font-size: 27px;
+    color: #C7A572;
 }
 
 .coffee-shop-search-tagline-2 {
     /*visibility: hidden;*/
     font-family: Helvetica;
     font-size: 20px;
+    color: #C7A572;
 }
 
 #map {
@@ -239,7 +247,7 @@ h1 {
 }
 
 .side-panel-wrap {
-    margin-top: 90px;
+    margin-top: 106px;
     margin-bottom: 2%;
     display: inline-block;
     height: 545px;
@@ -258,20 +266,23 @@ h1 {
     bottom: 3px;*/
     border-radius: 5px;
     /*margin-right: 55px;*/
-    margin-bottom: 3px;
+    margin-bottom: 8px;
 }
 
 #coffee-shop-reviews {
     /*margin-top: 40px;*/
     /*width: 350px;*/
     width: 100%;
-    height: 513px;
+    height: 504px;
     padding: 7px;
     /*display: inline-block;*/
     border: 1px solid black;
     border-radius: 8px;
     overflow: auto;
     /*background-color: #BD986F;*/
+    color: #4195b7;
+    font-size: 1.2em;
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .selected-results {
@@ -283,8 +294,11 @@ h1 {
     margin-right: auto;*/
     padding: 10px;
     border-radius: 8px;
-    background-color: black;
+    /*background-color: black;*/
+    background: rgba(0, 0, 0, 0.5);
     /*overflow: auto;*/
+    color: #C7A572;
+    font-size: 1.3em;
 }
 
 .selected-book {
@@ -293,18 +307,19 @@ h1 {
     float: left;
     /*border-radius: 8px;*/
     font-weight: bold;
-    margin-left: 5%;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-left: 4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     /*margin-right: auto;*/
     /*-webkit-transition: background-color 0.3s ease 0s;
     -moz-transition: background-color 0.3s ease 0s;
     transition: background-color 0.3s ease 0s;*/
 }
 
-.selected-book-name {
+
+/*.selected-book-name {
     color: white;
-}
+}*/
 
 .selected-coffee-shop {
     /*height: 100px;*/
@@ -314,9 +329,9 @@ h1 {
     /*padding: 10px;*/
     /*border-radius: 8px;*/
     font-weight: bold;
-    margin-left: 5%;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-left: 4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     /*border-left: 1px solid white;*/
     /*margin-right: auto;*/
     /*-webkit-transition: background-color 0.3s ease 0s;
@@ -324,14 +339,10 @@ h1 {
     transition: background-color 0.3s ease 0s;*/
 }
 
-.selected-coffee-shop-name {
-    /*display: inline-block;*/
+
+/*.selected-coffee-shop-name {
+    display: inline-block;
     color: white;
-}
-
-
-/*.selected-book:hover, .selected-coffee-shop:hover {
-    background-color: #202020;
 }*/
 
 .selected-coffee-shop-vicinity {
@@ -339,7 +350,6 @@ h1 {
 }
 
 #text-directions-panel {
-    /*width: 350px;*/
     width: 100%;
     height: 545px;
     padding: 7px;
@@ -348,12 +358,12 @@ h1 {
     border-radius: 8px;
     overflow: auto;
     margin-bottom: 2%;
-    /*background-color: #BD986F;*/
+    color: #4195b7;
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .address-input-panel {
     display: inline-block;
-    /*width: 250px;*/
     width: 100%;
     height: 545px;
     padding: 7px;
@@ -361,7 +371,9 @@ h1 {
     border-radius: 8px;
     overflow: auto;
     margin-bottom: 2%;
-    /*background-color: #BD986F;*/
+    color: #C7A572;
+    background: rgba(0, 0, 0, 0.5);
+    font-size: 1.2em;
 }
 
 #final-form {
@@ -373,25 +385,88 @@ label#startLabel, label#endLabel {
     margin-left: 15px;
 }
 
-
-/*input#start, input#end {
-    width: 92%;
-}*/
-
 button#finalBtn {
     margin-top: 5px;
 }
 
-.coffee-review-border {
-    border-bottom: 1px solid black;
+.coffee-review {
+    border: 1px solid #303030;
+    border-radius: 8px;
 }
 
 .coffee-review-background {
-    /*background-color: #cccccc;*/
+    background-color: black;
     font-weight: bold;
+    color: #337ab7;
+    border-bottom: 1px solid #303030;
+    font-size: 1.15em;
+    border-radius: 8px 8px 0 0;
 }
 
 .coffee-review-text {
     text-align: left;
     padding-left: 4px;
+    color: #337ab7;
+}
+
+.adp-directions {
+    color: white;
+}
+
+@media only screen and (max-width: 737px) {
+    .title {
+        font-size: 50px;
+        padding-top: 5px;
+    }
+    .subtitle {
+        font-size: 15px;
+    }
+    h1 {
+        margin-bottom: 15px;
+    }
+    .instructions {
+        width: 108%;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+    .landing-page {
+        margin-top: 80px;
+    }
+    .instruction-merienda {
+        font-size: 26px;
+        margin-right: 7px;
+    }
+    .instruction-helvetica {
+        font-size: 13px;
+    }
+    .books-bg {
+        background: url("../img/booksMobile960.jpg") no-repeat center center fixed;
+    }
+    #book-search-tagline, .coffee-shop-search-tagline-1 {
+        margin-top: 5px;
+        margin-bottom: 8px;
+    }
+    .book-results, .coffee-shop-results, .final-page-results {
+        height: 285px;
+    }
+    #coffee-shop-input {
+        width: 75%;
+        margin-top: 50px;
+    }
+    .side-panel-wrap {
+        margin-top: 2px;
+    }
+    #booksBtn {
+        margin-top: 5px;
+    }
+    #text-directions-panel {
+        margin-top: 4%;
+        margin-bottom: 4%;
+    }
+}
+
+@media only screen and (max-width: 321px) {
+    .title {
+        font-size: 44px;
+    }
 }
