--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,11 @@ h1 {
     border-radius: 8px;
 }
 
+#landingBtn {
+    font-family: Tahoma;
+    font-size: 18px;
+}
+
 
 /*.landing-page {
     width: 100%;
@@ -172,7 +177,7 @@ h1 {
 
 #book-search-tagline {
     display: inline-block;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     margin-bottom: 20px;
     font-family: 'Merienda One', cursive;
     font-size: 27px;
@@ -191,6 +196,11 @@ h1 {
     margin-bottom: 20px;
 }
 
+.book-page-inner-container {
+    margin-left: 8%;
+    margin-top: 5%;
+}
+
 .book-results, .coffee-shop-results, .final-page-results {
     width: 100%;
     height: 545px;
@@ -202,16 +212,42 @@ h1 {
 }
 
 .book-results {
-    padding: 10px;
-    /*width: 50%;*/
+    padding: 12px;
+    color: #337ab7;
+    width: 80%;
 }
 
 .book-info {
     margin-bottom: 18px;
 }
 
+.book-title {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.book-title-author-wrap {
+    background-color: black;
+    border-bottom: 1px solid #303030;
+}
+
+.book-description-snippet {
+    display: inline-block;
+    width: 65%;
+}
+
+.book-image {
+    width: 30%
+}
+
+.book-image img {
+    width: 100%;
+}
+
 .select-book {
     margin-top: 5px;
+    /*color: black;*/
+    font-size: 16px;
 }
 
 #coffee-shop-input {
@@ -306,7 +342,7 @@ h1 {
     /*padding: 10px;*/
     float: left;
     /*border-radius: 8px;*/
-    font-weight: bold;
+    /*font-weight: bold;*/
     margin-left: 4%;
     padding-top: 2%;
     padding-bottom: 2%;
@@ -316,10 +352,17 @@ h1 {
     transition: background-color 0.3s ease 0s;*/
 }
 
+.final-page-book-name, .final-page-book-url, .final-page-shop-name, .final-page-shop-address {
+    font-weight: bold;
+    background-color: black;
+    font-size: 1.31em;
+}
 
-/*.selected-book-name {
-    color: white;
-}*/
+.final-page-guide {
+    font-weight: bold;
+    background-color: black;
+    font-size: 1em;
+}
 
 .selected-coffee-shop {
     /*height: 100px;*/
@@ -328,7 +371,7 @@ h1 {
     display: inline-block;
     /*padding: 10px;*/
     /*border-radius: 8px;*/
-    font-weight: bold;
+    /*font-weight: bold;*/
     margin-left: 4%;
     padding-top: 2%;
     padding-bottom: 2%;
@@ -380,8 +423,8 @@ h1 {
     margin-top: 40px;
 }
 
-label#startLabel, label#endLabel {
-    margin-top: 20px;
+label#startLabel, label#endLabel, label#travelModeLabel {
+    /*margin-top: 20px;*/
     margin-left: 15px;
 }
 
@@ -410,10 +453,25 @@ button#finalBtn {
 }
 
 .adp-directions {
-    color: white;
+    color: white !important;
 }
 
-@media only screen and (max-width: 737px) {
+.adp-summary {
+    color: #337ab7 !important;
+    font-weight: bold;
+}
+
+.adp-stepicon {
+    background-color: green !important;
+}
+
+.address-instructions {
+    color: #337ab7;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+@media only screen and (max-width: 740px) {
     .title {
         font-size: 50px;
         padding-top: 5px;
@@ -432,6 +490,9 @@ button#finalBtn {
     .landing-page {
         margin-top: 80px;
     }
+    #landingBtn {
+        font-size: 15px;
+    }
     .instruction-merienda {
         font-size: 26px;
         margin-right: 7px;
@@ -439,8 +500,38 @@ button#finalBtn {
     .instruction-helvetica {
         font-size: 13px;
     }
+    body {
+        background-color: black;
+        height: 100%;
+        background-attachment: fixed;
+        /*background-position: right center;*/
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-image: url("../img/booksMobile960.jpg");
+        background-size: cover;
+    }
     .books-bg {
         background: url("../img/booksMobile960.jpg") no-repeat center center fixed;
+        background-size: cover;
+        -webkit-transition: all 0.9s ease-in 0.15s;
+        -moz-transition: all 0.9s ease-in 0.15s;
+        transition: all 0.9s ease-in 0.15s;
+    }
+    .coffee-bg {
+        background: url("../img/booksMobile960.jpg") no-repeat center center fixed;
+        background-size: cover;
+        /*z-index: 2;*/
+        -webkit-transition: all 0.9s ease-in 0.2s;
+        -moz-transition: all 0.9s ease-in 0.2s;
+        transition: all 0.9s ease-in 0.2s;
+    }
+    .final-bg {
+        background: url("../img/booksMobile960.jpg") no-repeat center center fixed;
+        background-size: cover;
+        /*z-index: 3;*/
+        -webkit-transition: all 0.9s ease-in 0.2s;
+        -moz-transition: all 0.9s ease-in 0.2s;
+        transition: all 0.9s ease-in 0.2s;
     }
     #book-search-tagline, .coffee-shop-search-tagline-1 {
         margin-top: 5px;
@@ -448,6 +539,15 @@ button#finalBtn {
     }
     .book-results, .coffee-shop-results, .final-page-results {
         height: 285px;
+    }
+    .book-results, .book-description-snippet {
+        width: 100%;
+    }
+    .book-page-inner-container {
+        margin-left: 0;
+    }
+    .book-image {
+        width: 60%;
     }
     #coffee-shop-input {
         width: 75%;
@@ -462,6 +562,16 @@ button#finalBtn {
     #text-directions-panel {
         margin-top: 4%;
         margin-bottom: 4%;
+    }
+    /*.selected-book {
+        word-wrap: break-word;
+    }*/
+    .selected-results {
+        font-size: 1em;
+        padding: 0;
+    }
+    .final-page-book-name, .final-page-book-url, .final-page-shop-name, .final-page-shop-address {
+        font-size: 1.3em;
     }
 }
 
