--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,6 @@
     box-sizing: border-box;
 }
 
-
-/*html, body {
-    height: 100%;
-    background-color: black;
-}*/
-
 body {
     background-color: black;
     height: 100%;
@@ -42,6 +36,18 @@ body {
     transition: all 0.9s ease-in 0.2s;
 }
 
+a:link, a:active, a:visited {
+    color: #337ab7;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+#external-link-img {
+    width: 12px;
+}
+
 header {
     width: 100%;
     background: rgba(0, 0, 0, 0.7);
@@ -49,39 +55,22 @@ header {
     border-radius: 8px;
 }
 
-a:link, a:active, a:visited {
-    color: #337ab7;
-}
-
-#external-link-img {
-    width: 12px;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
 .title {
-    /*width: 100%;*/
     margin-top: 0;
     padding-top: 20px;
-    /*border: 1px solid white;*/
     font-family: 'Dancing Script', cursive;
     font-size: 115px;
-    /*color: #4195b7;*/
     color: #337ab7;
     font-weight: bold;
     letter-spacing: 7px;
 }
 
 .subtitle {
-    /*padding-top: 5px;*/
     padding-bottom: 10px;
     color: #C7A572;
     font-weight: bold;
     font-size: 22px;
     font-family: 'Oswald', sans-serif;
-    /*border: 1px solid white;*/
     letter-spacing: 2px;
 }
 
@@ -104,18 +93,15 @@ h1 {
 }
 
 .instruction-helvetica {
-    /*font-family: 'Oswald', sans-serif;*/
     font-family: Helvetica;
     font-size: 24px;
     font-weight: bold;
 }
 
 .active {
-    /*color: #177E89;*/
     color: #177E89;
     font-weight: bold;
     background-color: gray;
-    /*font-size: 18px;*/
 }
 
 .hide {
@@ -133,8 +119,6 @@ h1 {
 }
 
 .landing-page, .find-book-page, .find-coffee-shop-page, .final-page {
-    /*margin-left: auto;
-    margin-right: auto;*/
     background: rgba(0, 0, 0, 0.7);
     color: #4195b7;
     border-radius: 8px;
@@ -145,27 +129,6 @@ h1 {
     font-size: 18px;
 }
 
-
-/*.landing-page {
-    width: 100%;
-    padding-bottom: 50px;
-}
-
-.find-book-page {
-    width: 100%;
-    padding-bottom: 10px;
-}
-
-.find-coffee-shop-page {
-    width: 100%;
-    padding-bottom: 10px;
-}
-
-.final-page {
-    width: 100%;
-    padding-bottom: 10px;
-}*/
-
 #landing-btn-container {
     text-align: center;
     margin-top: 50px;
@@ -174,7 +137,6 @@ h1 {
 
 #book-search-tagline {
     display: inline-block;
-    /*margin-top: 20px;*/
     margin-bottom: 20px;
     font-family: 'Merienda One', cursive;
     font-size: 27px;
@@ -182,7 +144,6 @@ h1 {
 }
 
 #book-select-tagline {
-    /*display: none;*/
     font-family: Helvetica;
     font-size: 20px;
     color: #C7A572;
@@ -202,7 +163,6 @@ h1 {
     width: 100%;
     height: 545px;
     overflow: auto;
-    /*border: 1px solid black;*/
     border-radius: 8px;
     margin-bottom: 2%;
     background: rgba(0, 0, 0, 0.5);
@@ -211,7 +171,6 @@ h1 {
 .book-results {
     padding: 12px;
     color: #337ab7;
-    width: 80%;
 }
 
 .book-info {
@@ -243,7 +202,6 @@ h1 {
 
 .select-book {
     margin-top: 5px;
-    /*color: black;*/
     font-size: 16px;
 }
 
@@ -264,14 +222,12 @@ h1 {
 }
 
 .coffee-shop-search-tagline-2 {
-    /*visibility: hidden;*/
     font-family: Helvetica;
     font-size: 20px;
     color: #C7A572;
 }
 
 #map {
-    /*height: 540px;*/
     display: inline-block;
 }
 
@@ -284,35 +240,25 @@ h1 {
     margin-bottom: 2%;
     display: inline-block;
     height: 545px;
-    /*width: 352px;*/
     width: 100%;
     text-align: center;
-    /*vertical-align fixes alingment bug in MS Edge*/
+    /* using "vertical-align" as 
+    a MS Edge alingment bug fix */
     vertical-align: top;
 }
 
 #coffeeShopBtn {
-    /*display: none;*/
-    /*float: right;*/
-    /*position: relative;
-    left: 480px;
-    bottom: 3px;*/
     border-radius: 5px;
-    /*margin-right: 55px;*/
     margin-bottom: 8px;
 }
 
 #coffee-shop-reviews {
-    /*margin-top: 40px;*/
-    /*width: 350px;*/
     width: 100%;
     height: 504px;
     padding: 7px;
-    /*display: inline-block;*/
     border: 1px solid black;
     border-radius: 8px;
     overflow: auto;
-    /*background-color: #BD986F;*/
     color: #4195b7;
     font-size: 1.2em;
     background: rgba(0, 0, 0, 0.5);
@@ -320,33 +266,20 @@ h1 {
 
 .selected-results {
     width: 100%;
-    /*height: 100px;*/
     margin-top: 5px;
     margin-bottom: 5px;
-    /*margin-left: auto;
-    margin-right: auto;*/
     padding: 10px;
     border-radius: 8px;
-    /*background-color: black;*/
     background: rgba(0, 0, 0, 0.5);
-    /*overflow: auto;*/
     color: #C7A572;
     font-size: 1.22em;
 }
 
 .selected-book {
-    /*height: 100px;*/
-    /*padding: 10px;*/
     float: left;
-    /*border-radius: 8px;*/
-    /*font-weight: bold;*/
     margin-left: 4%;
     padding-top: 2%;
     padding-bottom: 2%;
-    /*margin-right: auto;*/
-    /*-webkit-transition: background-color 0.3s ease 0s;
-    -moz-transition: background-color 0.3s ease 0s;
-    transition: background-color 0.3s ease 0s;*/
 }
 
 .final-page-book-name, .final-page-book-url, .final-page-shop-name, .final-page-shop-address {
@@ -356,36 +289,17 @@ h1 {
 }
 
 .final-page-guide {
-    /*font-weight: bold;
-    background-color: black;*/
     font-size: 0.8em;
     color: gray;
     word-wrap: break-word;
 }
 
 .selected-coffee-shop {
-    /*height: 100px;*/
-    /*margin-left: 5px;*/
-    /*padding-left: 5px;*/
     display: inline-block;
-    /*padding: 10px;*/
-    /*border-radius: 8px;*/
-    /*font-weight: bold;*/
     margin-left: 4%;
     padding-top: 2%;
     padding-bottom: 2%;
-    /*border-left: 1px solid white;*/
-    /*margin-right: auto;*/
-    /*-webkit-transition: background-color 0.3s ease 0s;
-    -moz-transition: background-color 0.3s ease 0s;
-    transition: background-color 0.3s ease 0s;*/
 }
-
-
-/*.selected-coffee-shop-name {
-    display: inline-block;
-    color: white;
-}*/
 
 .selected-coffee-shop-vicinity {
     display: inline-block;
@@ -423,7 +337,6 @@ h1 {
 }
 
 label#startLabel, label#endLabel, label#travelModeLabel {
-    /*margin-top: 20px;*/
     margin-left: 15px;
 }
 
@@ -503,7 +416,6 @@ button#finalBtn {
         background-color: black;
         height: 100%;
         background-attachment: fixed;
-        /*background-position: right center;*/
         background-position: center center;
         background-repeat: no-repeat;
         background-image: url("../img/booksMobile960.jpg");
@@ -560,9 +472,6 @@ button#finalBtn {
         margin-top: 4%;
         margin-bottom: 4%;
     }
-    /*.selected-book {
-        word-wrap: break-word;
-    }*/
     .selected-results {
         font-size: 1em;
         padding: 0;
