--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,11 @@ h1 {
     background: rgba(0, 0, 0, 0.7);
     color: #4195b7;
     border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.selected-book-url a {
+    text-decoration: underline;
 }
 
 #landingBtn {
@@ -373,11 +378,13 @@ button#finalBtn {
 .adp-directions {
     /* "adp" is google specific css class */
     color: white !important;
+    /* margin: 0 auto; */
 }
 
 .adp-summary {
     color: #337ab7 !important;
     font-weight: bold;
+    text-align: center;
 }
 
 .adp-stepicon {
